# projecto-final-grupo-5

./: CMakeLists.txt  main.cpp  neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h  tensor.h
Data/: pong_model_dense1.weights  pong_model_dense2.weights  pong_train.csv  pong_train_manual.csv
docs/: README.md  README_FINAL.md  README_FINAL_COMPLETO.md
include/agent/: EnvGym.h  PongAgent.h
include/algebra/: tensor.h
include/nn/: activation.h  dense.h  interfaces.h  loss.h  neural_network.h  optimizer.h  parallel_inference.h
src/utec/: DataGenerator.cpp  concurrent_queue.h  thread_pool.h
src/utec/agent/: EnvGym.cpp  PonAgent.cpp
tests/: test_agent_env.cpp
